--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,33 @@
-.App{
-  height: 100dvh;
-  width: 100dvw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.App {
+	height: 100dvh;
+	width: 100dvw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
-.board{
-  margin: auto;
-  width: 50dvw;
-  height: 50dvw;
-  display: grid;
-  grid-template-rows: repeat(8, 1fr);
-  background-image: url('../public/board.png');
-  background-size: contain;
+.board {
+	margin: auto;
+	width: 50dvw;
+	height: 50dvw;
+	display: grid;
+	grid-template-rows: repeat(8, 1fr);
+	background-image: url("/board.png");
+	background-size: contain;
 }
 
-.row{
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
+.row {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
 }
 
-.cell{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.cell {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.piece{
-  max-width: 100%;
+.piece {
+	max-width: 100%;
 }
