--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-	height: 100dvh;
-	width: 100dvw;
+	min-height: 100dvh;
+	min-width: 100dvw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -9,12 +9,12 @@
 
 .board {
 	margin: auto;
-	width: 50dvw;
-	height: 50dvw;
+	width: 90dvh;
+	height: 90dvh;
 	display: grid;
 	grid-template-rows: repeat(8, 1fr);
 	background-image: url("/board.png");
-	background-size: contain;
+	background-size: cover;
 }
 
 .row {
