--- a/src/components/modalWinner.css
+++ b/src/components/modalWinner.css
@@ -1,7 +1,8 @@
 .winner-modal {
 	position: absolute;
-	top: calc(50dvh - 100px);
-	left: calc(50dvw - 200px);
+	top: 50dvh;
+	left: 50dvw;
+	transform: translate(-200px, -100px);
 	background-color: #222;
 	width: 400px;
 	height: 200px;
